--- a/Guidelines_3_2_3_15993_ConformanceTesting.adoc
+++ b/Guidelines_3_2_3_15993_ConformanceTesting.adoc
@@ -15,7 +15,7 @@
 // 3_1_GuidelinesList.adoc 
 [[b15993]]
 
-=== {chapter-id}.{chapter-sub-id}.{counter:section-id}. Conformance Testing
+=== {chapter-id}.{chapter-sub-id}.{counter:section-id}. Conformance testing
 
 It is not the intent for Khronos conformance tests for Safety Critical technologies to used or supplied for certification testing. The intent for the Khronos conformance tests are to test the implementations conformance with the specification in order to ensure that all implementations share the same contract with the application and thereby avoid industry fragmentation through different behavior for the same function.
 
