--- a/Guidelines_3_2_12_7_ReduceOptionsToAMinimum.adoc
+++ b/Guidelines_3_2_12_7_ReduceOptionsToAMinimum.adoc
@@ -17,12 +17,16 @@
 
 === {chapter-id}.{chapter-sub-id}.{counter:section-id}. Reduce function parameters' complexity
 
+Also see:
+
+- Requirements document chapter 'Code complexity'
+
 Many functions in an API specification require one or more parameters which each in turn can allow numerous possibilities to alter the desired intended behavoir of the runtime. These permutations lead to complexity. It can also lead to operational redundancy where features will never be used in the context it is aimed for. In SC development it is generally bad practice to have unused code in the final implementation. To reduce this complexity and feature redundancy. It is advised that where possible things like:
 
-- modes of operation
-- enumerations
-- accuracy 
-- range of acceptable formats 
+- Modes of operation
+- Enumerations
+- Accuracy 
+- Range of acceptable formats 
 
 be reduced or removed to allow the runtime to operate with just a minimum set of parameters with one mandatory option. 
 
