Add content: Textadded to memory mangement concerning partitioning and MMUs

--- a/Guidelines_3_2_2_15991_MemoryManagement.adoc
+++ b/Guidelines_3_2_2_15991_MemoryManagement.adoc
@@ -33,5 +33,6 @@ NOTE: It is assumed that the OS default generic shared allocation system (compet
 
 ==== Memory management unit (MMU)
 
-For higher safety critical levels safety standards generally ask for guarantees that an item (a system or component) is free from interference. Interference is a term given to external actions that interact in appropriately with the item to cause it to perform unspecified behaviour. Interference can come from other processes running on the system and for example walking over another process's memory space or outside activity otherwise known as hacking. It is therefore highly recommended that MMU be used to assist in freedom from interference.
+For higher safety critical levels safety standards generally ask for guarantees that an item (a system or component) is free from interference. Interference is a term given to external actions that interact inappropriately with the item to cause it to perform unspecified behaviour. Interference can come from other processes running on the system and for example walking over another process's memory space or outside activity otherwise known as hacking. It is therefore highly recommended that MMU be used to assist in freedom from interference. An MMU can help enforce partitioning, the separation of lower level safety critical items (which have less quality rigor applied to them) from higher more critical items. Partitioning can come about where a critical complex system is broken down into separate functional parts to simplify the task of verifying those parts achieve their safety goals. The criteria for those goals may qualify them to have lower safety ratings and so less safety rigor applied (less time and cheaper).
+ 
 
