--- a/Guidelines_3_2_17_28_Cybersecurity.adoc
+++ b/Guidelines_3_2_17_28_Cybersecurity.adoc
@@ -52,3 +52,27 @@ An API that can allow for appropriate authorization and authentication policies 
 On an embedding system with an OS supporting multiple executing processes allows for the possibility of interference by one process on another. The ‘attacking’ process could be a non-critical one written to comply with a lower safety critical quality standard, for example ISO 26262 ASIL-A or QA. The lower applied code quality rigor or data integrity checked required for such a process could allow for an attack vector in to higher safety critical processes. From a cybersecurity point of view, it does not align with safety critical levels and all surfaces are open for exploring and attack. A successful attack shows a gap in your safety analysis.
 
 It is therefore recommended cybersecurity is taken into consideration alongside the safety standards being referenced to form a SC API. Many of the safety standard bodies are already looking at either integrating cybersecurity vulnerability standards into new versions of their standards or adapting their standard to accompany and reference a security standard to complete the safety standard. Cybersecurity guideline standards such as the European CAPUL, ISO/IEC 27032:2012 Information Technology Security Techniques guidelines for cyber-security and SAE J3061 Cyber-security guidebook for cyber-physical vehicle systems are good examples where security standards are being created to compliment safety standards.
+
+==== CERT C guidelines for embedded developers
+
+The CERT C and C++ Secure Coding Standards provide rules and recommendations for secure coding in
+the C and C++ programming languages. The CERT Division at the Software Engineering Institute (SEI) op-
+erated by Carnegie Mellon University publishes these standards. SEI is a research and development center
+primarily funded by the U.S. Department of Defense and the Department of Homeland Security. During re-
+search conducted over 15 plus years, CERT studied cases of software vulnerabilities and compiled a database.
+The Secure Coding Initiative uses this database to help develop secure coding practices in C.
+
+CERT provides rulesets for secure coding in C and C++. Each guideline consists of a title, a description, a
+non-compliant code example, and examples of compliant solutions. The guidelines cover avoiding coding
+and implementation errors as well as low-level design errors. The aim of these guidelines is to eliminate in-
+secure coding practices and unde ned behaviors that can lead to exploitable vulnerabilities. CERT describes
+a vulnerability as a software defect that affects security when it is present in information systems. The defect
+may be minor, in that it does not affect the performance or results produced by the software, but nevertheless
+may be exploited by an attack that results in a signi cant breach of security. CERT estimates that up to 90% of
+reported security incidents result from the exploitation of defects in software code or design.
+
+The CERT Secure Coding Standards can be used as a measure of software security by determining the
+degree to which a software system complies with the rules and recommendations in this standard. While
+compliance does not guarantee the absence of vulnerabilities (for example, vulnerabilities resulting from de-
+sign  aws), it does guarantee the absence of coding errors that are commonly found to be the root causes
+of vulnerabilities.
