New chapter: SC API development out of context (SEooC)

--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -59,6 +59,9 @@ include::Guidelines_3_2_16_10_ExceptionHandling.adoc[]
 
 include::Guidelines_3_2_17_28_Cybersecurity.adoc[]
 
+include::Guidelines_3_2_18_29_DevelopmentOutOfContext.adoc[]
+
+
 
 
 
