--- a/Guidelines_3_2_9_16011_DebugFunctionality.adoc
+++ b/Guidelines_3_2_9_16011_DebugFunctionality.adoc
@@ -9,12 +9,17 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.02
+:Revision: 0.03
 
 // Hyperlink anchor, the ID matches those in 
 // 3_1_GuidelinesList.adoc 
 [[b16011]]
 
+ifdef::basebackend-docbook[]
+=== Debug functionality
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{chapter-sub-id}.{counter:section-id}. Debug functionality
+endif::[]
 
 Debug functionality which is not used during final run-time should be moved to an extension so that it does not need to go the certification process for the final product release.
