--- a/Guidelines_1_0_Introduction.adoc
+++ b/Guidelines_1_0_Introduction.adoc
@@ -9,15 +9,25 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.02
+:Revision: 0.03
 
 // Automatic chapter sub numbering, use {counter:chapter-sub-id}  
 :chapter-sub-id: 0
 
 // This text is a near duplication of the text in the SCAP Requirements Introduction chapter
+ifdef::basebackend-docbook[]
+== Introduction
+endif::[]
+ifdef::basebackend-html[]
 == {counter:chapter-id}. Introduction
+endif::[]
 
-=== {chapter-id}.{counter:chapter-sub-id} Khronos Safety Critical Advisory Panel
+ifdef::basebackend-docbook[]
+=== Khronos Safety Critical Advisory Panel
+endif::[]
+ifdef::basebackend-html[]
+=== {chapter-id}.{counter:chapter-sub-id}. Khronos Safety Critical Advisory Panel
+endif::[]
 
 The Khronos Safety Critical Advisory Panel (SCAP) is a workgroup to create requirements and guidelines for the design of new Khronos safety critical graphics, compute and vision processing APIs or the refactoring of their existing APIs to a safety critical (SC) version. 
 
@@ -38,10 +48,20 @@ SCAP is open to both Khronos members and invited experts from the various SC ind
 
 We assume the reader has experience in software development in general and has at a least some rudimentary understanding of programming best practices and the implications and consequences of writing software if not written with rigor and oversight.
 
+ifdef::basebackend-docbook[]
+=== The Guidelines
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{counter:chapter-sub-id}. The Guidelines
+endif::[]
 
 This document, referred to as the Khronos SCAP Guidelines document, gives guidance on various aspects of SC programming practices, SC programming standards or SC processes that can be used when designing an API which it to be used for SC software development. 
 
+ifdef::basebackend-docbook[]
+=== The Requirements
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{counter:chapter-sub-id}. The Requirements
+endif::[]
 
 There is an accompanying Khronos SCAP Requirements document which states development requirements for developing the same Khronos SC API. The Requirements document is meant to be used together with this Guidelines document.
