--- a/Guidelines_2_1_SCAPRiderStatement.adoc
+++ b/Guidelines_2_1_SCAPRiderStatement.adoc
@@ -9,10 +9,15 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.02
+:Revision: 0.03
 
 [[Guideline_2_1_SCAPRiderStatement]]
 
+ifdef::basebackend-docbook[]
+=== Khronos SCAP document usage
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{counter:chapter-sub-id}. Khronos SCAP document usage
+endif::[]
 
 include::cmn_KhronosSCAPRiderStatement.adoc[]
