--- a/Guidelines_2_3_Terminology.adoc
+++ b/Guidelines_2_3_Terminology.adoc
@@ -9,8 +9,13 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.02
+:Revision: 0.03
 
+ifdef::basebackend-docbook[]
+=== Terminology
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{counter:chapter-sub-id}. Terminology
+endif::[]
 
 include::cmn_Terminology.adoc[]
