--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -9,7 +9,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.022
+:Revision: 0.03
 
 // Automatic section numbering, use {counter:section-id}  
 :section-id: 0
@@ -17,7 +17,12 @@
 // Automatic chapter sub numbering, use {counter:chapter-sub-id}  
 :chapter-sub-id: 0
 
+ifdef::basebackend-docbook[]
+== Guidelines
+endif::[]
+ifdef::basebackend-html[]
 == {counter:chapter-id}. Guidelines
+endif::[]
 
 The guidelines listed in table 3.1.1 are all the guidelines in this document. However this list is continuously revised with new guidelines being added on a regular basis. 
 
