--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -14,14 +14,19 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.022
+:Revision: 0.03
 
+ifdef::basebackend-docbook[]
+=== Guidelines list
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{counter:chapter-sub-id}. Guidelines list
+endif::[]
 
 The following is a list of all the SCAP guidelines when considering designing and implementing a SC API.
 
 .List of guidelines
-[caption="Table 3.1.1: ", cols="^4,10", width="90%", options="header", frame="topbot"]
+[caption="Table {counter:table-id}: ", cols="^4,10", width="90%", options="header", frame="topbot"]
 |=============================
 |Guideline | Description 
 |<<b15008,{counter:section-id}>>  | List of SC RTOS and their unique features
