--- a/Guidelines_3_2_12_7_ReduceOptionsToAMinimum.adoc
+++ b/Guidelines_3_2_12_7_ReduceOptionsToAMinimum.adoc
@@ -9,13 +9,18 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.022
+:Revision: 0.03
 
 // Hyperlink anchor, the ID matches those in 
 // 3_1_GuidelinesList.adoc 
 [[gh7]]
 
+ifdef::basebackend-docbook[]
+=== Reduce function parameters' complexity
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{chapter-sub-id}.{counter:section-id}. Reduce function parameters' complexity
+endif::[]
 
 Also see:
 
