--- a/Guidelines_3_2_13_8_HandlingErrorConditions.adoc
+++ b/Guidelines_3_2_13_8_HandlingErrorConditions.adoc
@@ -9,13 +9,18 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.022
+:Revision: 0.03
 
 // Hyperlink anchor, the ID matches those in 
 // 3_1_GuidelinesList.adoc 
 [[gh8]]
 
+ifdef::basebackend-docbook[]
+=== Handling of error conditions
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{chapter-sub-id}.{counter:section-id}. Handling of error conditions
+endif::[]
 
 Also see:
 
