--- a/Guidelines_3_2_15_16_NonRecoverableErrorConditionsReportingStatus.adoc
+++ b/Guidelines_3_2_15_16_NonRecoverableErrorConditionsReportingStatus.adoc
@@ -9,13 +9,18 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.02
+:Revision: 0.03
 
 // Hyperlink anchor, the ID matches those in 
 // 3_1_GuidelinesList.adoc 
 [[gh16]]
 
+ifdef::basebackend-docbook[]
+=== Non recoverable error conditions and reporting status
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{chapter-sub-id}.{counter:section-id}. Non recoverable error conditions and reporting status
+ndif::[]
 
 Also see:
 
