--- a/Guidelines_3_2_4_16012_SCAPISubSetOfGenPurAPI.adoc
+++ b/Guidelines_3_2_4_16012_SCAPISubSetOfGenPurAPI.adoc
@@ -9,13 +9,18 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.02
+:Revision: 0.03
 
 // Hyperlink anchor, the ID matches those in 
 // 3_1_GuidelinesList.adoc 
 [[b16012]]
 
+ifdef::basebackend-docbook[]
+=== The SC API 
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{chapter-sub-id}.{counter:section-id}. The SC API 
+endif::[]
 
 The SC version of the API should be a subset of the API in question. Allowing applications written for the SC version of the API to compile, link and function using a library or driver which provides the more general API. By keeping the SC API as a subset we do not introduce more IP than that which exists in the already ratified version of the standard. From a Khronos perspective this simplifies IP rights and ratification of the SC standard.
 
