--- a/Guidelines_3_2_7_16018_RealTime.adoc
+++ b/Guidelines_3_2_7_16018_RealTime.adoc
@@ -9,13 +9,18 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.02
+:Revision: 0.03
 
 // Hyperlink anchor, the ID matches those in 
 // 3_1_GuidelinesList.adoc 
 [[b16018]]
 
+ifdef::basebackend-docbook[]
+=== Real time
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{chapter-sub-id}.{counter:section-id}. Real time
+endif::[]
 
 The implementation of the SC API must have deterministic execution timing in real time systems and potentially non-deterministic techniques, such as dynamic memory allocation and locking, should be avoided where feasible. The API implementation must define the expected real-time characteristics, and particularly, whether hard or soft real-time is targeted. For all potentially blocking functions, a timeout option must be provided.
 event or state change occur.
