--- a/Guidelines_4_1_Denial-of-Service.adoc
+++ b/Guidelines_4_1_Denial-of-Service.adoc
@@ -10,9 +10,14 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.021
+:Revision: 0.03
 
+ifdef::basebackend-docbook[]
+=== Denial-of-Service (DoS)
+endif::[]
+ifdef::basebackend-html[]
 === {chapter-id}.{counter:chapter-sub-id}. Denial-of-Service (DoS)
+endif::[]
 
 See also:
 
