--- a/GuidelinesListDocChanges.adoc
+++ b/GuidelinesListDocChanges.adoc
@@ -12,7 +12,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.03
+:Revision: 0.031
 
 === Document Change History
 
@@ -25,6 +25,7 @@ List of the changes that have occurred between one or more releases.
 |0.02     | 2017-05-01                   | Previous content changes and updates
 |0.021    | 2017-05-01                   | Add new section Discussion Points 
 |0.022    | 2017-09-28                   | Add content or fix content. Fix PDF chapter and section numbering
-|0.03     | {docdate}                    | Add content or fix content
+|0.03     | 2017-09-29                   | Fix spelling
+|0.031    | {docdate}                    | Add content or fix content
 |1.0      | [red yellow-background]#???# | First revision
 |=============================
